@@ -137,6 +137,7 @@ enum conn_states {
 #define NREAD_ADD 1
 #define NREAD_SET 2
 #define NREAD_REPLACE 3
+#define NREAD_APPEND 4
 
 typedef struct {
     int    sfd;
